# convergio-org-package

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  release-please-config.json
crates/convergio-org-package/: Cargo.toml
crates/convergio-org-package/src/: delegation.rs  delegation_tests.rs  ext.rs  installer.rs  lib.rs  manifest.rs  manifest_tests.rs  mcp_defs.rs  routes.rs  sandbox.rs  sandbox_tests.rs  signing.rs  token.rs  token_tests.rs
docs/adr/: 001-extraction.md  002-audit-security-fixes.md
