[workspace]
resolver = "2"
members = ["crates/convergio-org-package"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "LicenseRef-Convergio-Community"
repository = "https://github.com/Roberdan/convergio-org-package"

[workspace.dependencies]
# SDK dependencies
convergio-sdk = { git = "https://github.com/Roberdan/convergio-sdk", tag = "v0.1.7" }
convergio-types = { git = "https://github.com/Roberdan/convergio-sdk", tag = "v0.1.7" }
convergio-db = { git = "https://github.com/Roberdan/convergio-sdk", tag = "v0.1.7" }
convergio-security = { git = "https://github.com/Roberdan/convergio-sdk", tag = "v0.1.7" }
convergio-ipc = { git = "https://github.com/Roberdan/convergio-ipc", tag = "v0.1.4" }

# Common deps
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
axum = { version = "0.7", features = ["ws", "multipart"] }
rusqlite = { version = "0.32", features = ["bundled", "functions"] }
uuid = { version = "1", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
toml = "0.8"
