[workspace]
resolver = "2"
members = ["crates/convergio-org-package"]

[workspace.package]
version = "0.1.5"
edition = "2021"
license = "MIT"
repository = "https://github.com/Roberdan/convergio-org-package"

[workspace.dependencies]
# SDK dependencies
convergio-types = "0.1"
convergio-db = "0.1"
convergio-security = "0.1"
convergio-ipc = "0.1"

# Common deps
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
axum = { version = "0.7", features = ["ws", "multipart"] }
rusqlite = { version = "0.32", features = ["bundled", "functions"] }
uuid = { version = "1", features = ["v4"] }
hmac = "0.13"
sha2 = "0.11"
base64 = "0.22"
toml = "1.1"
