[package]
name = "convergio-org-package"
description = "Org-as-package ecosystem: install, sandbox, sign, and delegate between org packages"
version = "0.1.5"
edition.workspace = true
license.workspace = true
repository = "https://github.com/Roberdan/convergio-org-package"

[dependencies]
convergio-types = { workspace = true }
convergio-db = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
axum = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
convergio-db = { workspace = true }
